[gd_scene load_steps=15 format=3 uid="uid://rdnwfhjjhxto"]

[ext_resource type="Script" path="res://pages/tutorial/scripts/tutorial_popup.gd" id="1_c8iv6"]
[ext_resource type="FontFile" uid="uid://bg1uiqnkiuxrm" path="res://assets/fonts/friendlyscribbles.ttf" id="2_cgscl"]
[ext_resource type="FontFile" uid="uid://d1lpjp4ojwfiy" path="res://assets/fonts/bm-kkubulim.regular.otf" id="3_2hh1t"]
[ext_resource type="StyleBox" uid="uid://xt5v685r88rp" path="res://styles/item_button.tres" id="4_hh56c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b37sb"]
content_margin_left = 11.0
content_margin_top = 11.0
content_margin_right = 11.0
bg_color = Color(0.147408, 0.113384, 0.287111, 0.509804)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rvv2u"]

[sub_resource type="Animation" id="Animation_2m61q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6bt4q"]
resource_name = "backdrop_appear"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dqiqv"]
resource_name = "backdrop_dkisappear"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rmlxo"]
_data = {
"RESET": SubResource("Animation_2m61q"),
"backdrop_appear": SubResource("Animation_6bt4q"),
"backdrop_disappear": SubResource("Animation_dqiqv")
}

[sub_resource type="Animation" id="Animation_1xiw8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/VBoxContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_3m2mn"]
resource_name = "alert_details_appear"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/VBoxContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ryb53"]
resource_name = "alert_details_disappear"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/VBoxContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kq7de"]
_data = {
"RESET": SubResource("Animation_1xiw8"),
"alert_details_appear": SubResource("Animation_3m2mn"),
"alert_details_disappear": SubResource("Animation_ryb53")
}

[node name="TutorialPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c8iv6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.313726)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -580.0
offset_top = -297.0
offset_right = 580.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(573, 286)
theme_override_constants/separation = 60

[node name="PopupContainer" type="PanelContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b37sb")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer/PopupContainer"]
layout_mode = 2

[node name="AlertLabel" type="Label" parent="ColorRect/VBoxContainer/PopupContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 12
theme_override_fonts/font = ExtResource("2_cgscl")
theme_override_font_sizes/font_size = 128
text = "ALERT !!"
horizontal_alignment = 1

[node name="Details" type="Label" parent="ColorRect/VBoxContainer/PopupContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("2_cgscl")
theme_override_font_sizes/font_size = 48
text = "Your daily expenses are: 
$200
If you have belowFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
$200 when this auction
is ended, you lose!"
horizontal_alignment = 1

[node name="FinishButton" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("3_2hh1t")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_rvv2u")
theme_override_styles/disabled_mirrored = ExtResource("4_hh56c")
theme_override_styles/disabled = ExtResource("4_hh56c")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_hh56c")
theme_override_styles/hover_pressed = ExtResource("4_hh56c")
theme_override_styles/hover_mirrored = ExtResource("4_hh56c")
theme_override_styles/hover = ExtResource("4_hh56c")
theme_override_styles/pressed_mirrored = ExtResource("4_hh56c")
theme_override_styles/pressed = ExtResource("4_hh56c")
theme_override_styles/normal_mirrored = ExtResource("4_hh56c")
theme_override_styles/normal = ExtResource("4_hh56c")
text = "alright..."

[node name="BackdropAnimationPLayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rmlxo")
}

[node name="AlertDetailsAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kq7de")
}

[connection signal="pressed" from="ColorRect/VBoxContainer/FinishButton" to="." method="_on_finish_button_pressed"]
[connection signal="animation_finished" from="AlertDetailsAnimationPlayer" to="." method="_on_alert_animation_finished"]
